--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "description": "Личный проект «Кэт энерджи» от HTML Academy",
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.5.x",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "2.26.x",
     "gulp": "4.0.x",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
     "gulp-less": "4.0.x",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
@@ -22,7 +27,8 @@
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp css",
-    "start": "gulp start"
+    "start": "gulp start",
+    "babel": "gulp babel"
   },
   "browserslist": [
     "last 2 versions",
@@ -39,5 +45,6 @@
   ],
   "engines": {
     "node": "8.16"
-  }
+  },
+  "dependencies": {}
 }
